--- a/Natours/index.html
+++ b/Natours/index.html
@@ -221,6 +221,60 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-lg">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img" />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-sm">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
+                enim magni labore fuga eum, nemo culpa dignissimos adipisci
+                distinctio suscipit quo asperiores reiciendis! Quo laborum
+                veritatis qui dolores eveniet adipisci! Animi, enim magni labore
+                fuga eum, nemo culpa dignissimos adipisci distinctio suscipit.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img" />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-sm">
+                wow! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
+                enim magni labore fuga eum, nemo culpa dignissimos adipisci
+                distinctio suscipit quo asperiores reiciendis! Quo laborum
+                veritatis qui dolores eveniet adipisci! Animi, enim magni labore
+                fuga eum, nemo culpa dignissimos adipisci distinctio suscipit.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
     </main>
     <!-- <section class="grid-test">
       <div class="row">
