--- a/Natours/index.html
+++ b/Natours/index.html
@@ -183,7 +183,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -213,7 +213,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -243,7 +243,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$697</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -412,6 +412,38 @@
         </div>
       </div>
     </footer>
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-sm">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-sm">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+            mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien.
+            Lorem mollis aliquam ut porttitor leo a diam. Amet risus nullam eget
+            felis eget nunc. Ac tortor vitae purus faucibus ornare. Elit at
+            imperdiet dui accumsan sit amet nulla. Nullam ac tortor vitae purus
+            faucibus ornare. Gravida rutrum quisque non tellus. Eu tincidunt
+            tortor aliquam nulla facilisi cras fermentum odio eu. Semper quis
+            lectus nulla at volutpat diam ut venenatis tellus. Ut pharetra sit
+            amet aliquam id. Id interdum velit laoreet id donec ultrices
+            tincidunt arcu. Id faucibus nisl tincidunt eget nullam non nisi.
+            Orci eu lobortis elementum nibh tellus molestie nunc non.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
